gcc/testsuite/rust/rustc/ui/error-codes/E0267.rs
fn main() {
    let w = || { break; }; // { dg-error ".E0267." "" { target *-*-* } }
}

